Fix Spark integration test