@@ -353,7 +353,7 @@
           <includes>
             <include>**/*IntegrationTest.java</include>
           </includes>
-          <argLine>${argLine}</argLine>
+          <argLine>${argLine} --add-exports java.base/sun.nio.ch=ALL-UNNAMED</argLine>
         </configuration>
         <executions>
           <execution>
@@ -363,7 +363,7 @@
               <goal>verify</goal>
             </goals>
             <configuration>
-              <argLine>${failsafeArgLine}</argLine>
+              <argLine>${failsafeArgLine} --add-exports java.base/sun.nio.ch=ALL-UNNAMED</argLine>
             </configuration>
           </execution>
         </executions>
